--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "syncoss",
-  "version": "1.1.0",
-  "description": "A Node.js package used for synchronizing local files and OSS.",
+  "version": "2.0.0",
+  "description": "Synchronizing local files and OSS.",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -16,10 +16,14 @@
     "sync",
     "files"
   ],
+  "bin": {
+    "syncOSS": "bin/syncOSS.js"
+  },
   "author": "JamesYin",
   "dependencies": {
-  "aliyun-sdk": "^1.6.3",
-  "chokidar": "^1.3.0"
+    "aliyun-sdk": "^1.6.3",
+    "chokidar": "^1.3.0",
+    "mime": "^1.3.4"
   },
   "license": "MIT",
   "bugs": {
