--- a/package.json
+++ b/package.json
@@ -21,9 +21,10 @@
   },
   "author": "JamesYin",
   "dependencies": {
-    "aliyun-sdk": "^1.6.3",
-    "chokidar": "^1.3.0",
-    "mime": "^1.3.4"
+    "aliyun-sdk": "^1.10.5",
+    "chokidar": "^1.7.0",
+    "command-line-args": "^4.0.6",
+    "mime": "^1.3.6"
   },
   "license": "MIT",
   "bugs": {
