--- a/package.json
+++ b/package.json
@@ -30,5 +30,8 @@
   "bugs": {
     "url": "https://github.com/elantion/SyncOSS/issues"
   },
-  "homepage": "https://github.com/elantion/SyncOSS#readme"
+  "homepage": "https://github.com/elantion/SyncOSS#readme",
+  "devDependencies": {
+    "@types/node": "^7.0.29"
+  }
 }
