--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Synchronizing local files and OSS.",
   "main": "index.js",
   "scripts": {
+    "build": "webpack",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -32,6 +33,8 @@
   },
   "homepage": "https://github.com/elantion/SyncOSS#readme",
   "devDependencies": {
-    "@types/node": "^7.0.29"
+    "@types/node": "^7.0.29",
+    "ts-loader": "^3.2.0",
+    "webpack": "^3.10.0"
   }
 }
