--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,16 @@
 {
   "compilerOptions": {
     "module": "commonjs",
-    "target": "es5",
-    "sourceMap": true,
+    "target": "es2015",
+    "sourceMap": false,
     "lib": [
-      "es6",
-      "es5"
+      "es2017",
+      "es2015",
+      "es2016"
     ]
   },
   "include": [
-    "**/*.*"
+    "lib/**/*.*"
   ],
   "exclude": [
     "node_modules"
